<resources>
    <string name="app_name">MyKotlinTestCode</string>
    <string name="pull_to_refresh">橡皮筋刷新</string>
    <string name="red_packet">红包雨</string>
    <string name="avdev">AudioVideoDev</string>
    <string name="webview">JS调用Android</string>
    <string name="viewStub">ViewStub</string>
    <string name="dagger">Dagger</string>
    <string name="scrollbar">Scrollbar</string>
    <string name="coordinator">Coordinator</string>
    <string name="guess">Guess</string>
    <string name="view_pager_gallery">ViewPagerGallery</string>
    <string name="item_count_4">item_count_4</string>
    <string name="item_count_6">item_count_6</string>
    <string name="item_count_8">item_count_8</string>
    <string name="voice_chat">VoiceChat</string>
    <string name="function_test">FunctionTest</string>
    <string name="egg_video">EggVideo</string>
    <string name="expand_item">ExpandableItem</string>
    <string name="section_item">SectionItem</string>
    <string name="red_packet_show">演示效果</string>
    <string name="red_packet_project">项目效果</string>
    <string name="red_packet_info_entrance">红包信息入口</string>
    <string name="av_dev_start_record">开始录音</string>
    <string name="av_dev_stop_record">结束录音</string>
    <string name="av_dev_convert">转换</string>
    <string name="av_dev_start_play">播放</string>
    <string name="av_dev_start_play_static">播放-铃声</string>
    <string name="av_dev_stop_play_static">停止-铃声</string>
    <string name="av_dev_stop_play">停止</string>
    <string name="record">AudioRecord</string>
    <string name="camera">Camera</string>
    <string name="opengl">OpenGL</string>

    <!--gallery-->
    <string name="viewpager">ViewPager</string>
    <string name="recyclerview">recyclerview</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.
        ]]>
    </string>

    <string name="show_upgrade_text">在充值 %1$s 鹅肝，即可升级为 %2$s</string>
    <string name="show_text">进来参与 %1$s 局游戏，即可领取 %2$s</string>
    <string name="show_privilege_text">大家都有 %1$s </string>
    <string name="community_detail_text_default">葡萄牙足球巨星C罗在本周一欧洲杯匈葡一役的赛前发布会上，拒绝与可口可乐“同框”，一度导致可口可乐股价急跌，市值蒸发近40亿美元。而如今，这一事件的余波似乎仍在发酵，更多球星效仿起了足坛偶像C罗的举动梅开二度的意大利中场球员洛卡特利</string>
    <string name="community_detail_text_default1">就在北京时间今日凌晨，意大利队在欧洲杯小组赛A组第二轮的比赛中，以3比0大胜瑞士队。此役发挥出色、梅开二度的意大利中场球员洛卡特利被评选为全场最佳球员，并出席了赛后发布会</string>
    <string name="community_detail_text_default2">葡萄牙足球巨星C罗在本周一欧洲杯匈葡一役的赛前发布会上，拒绝与可口可乐“同框”，一度导致可口可乐股价急跌，市值蒸发近40亿美元。而如今，这一事件的余波似乎仍在发酵，更多球星效仿起了足坛偶像C罗。</string>
</resources>
